--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "typescript": "^4.1.2",
     "vite": "^2"
-  }
+  },
+  "repository": "git@github.com:LuciferChiu/playground-prefab.git"
 }
